default/objects/Org_Chart_Field__c/Org_Chart_Field__c.object-meta.xml
<CustomObject>
    <description>Defines a field to display in an Account Plan org chart</description>
    <label>Org Chart Field</label>
    <nameField>
        <label>Org Chart Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Chart Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>