default/objects/Org_Chart_Field__c/fields/FieldLabel__c.field-meta.xml
<CustomField>
    <fullName>FieldLabel__c</fullName>
    <label>Field Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>