default/objects/Org_Chart_Field__c/fields/isRequired__c.field-meta.xml
<CustomField>
    <fullName>isRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether the related field can is allowed to be removed from the org chart display</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>