default/objects/Org_Chart_Field__c/fields/isVisible__c.field-meta.xml
<CustomField>
    <fullName>isVisible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether the related field is visible in the org chart user interface</description>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>