default/objects/Org_Chart_Field__c/fields/Map_Type__c.field-meta.xml
<CustomField>
    <fullName>Map_Type__c</fullName>
    <label>Map Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Map_Type</valueSetName>
    </valueSet>
</CustomField>