default/objects/Org_Chart_Field__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <label>Order</label>
    <type>AutoNumber</type>
</CustomField>