default/objects/Org_Chart_Field__c/fields/Related_FieldName__c.field-meta.xml
<CustomField>
    <fullName>Related_FieldName__c</fullName>
    <description>the API Name of the related field</description>
    <label>Related Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>